Revert "css fix for 100vh issue on mobile"
This reverts commit a1b76c62580c544b51eafd170c9a4f53d19a8e80.

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,12 +5,9 @@
 @layer base {
     html {
         font-family: Open Sans, system-ui, sans-serif;
-        height: -webkit-fill-available;
     }
     header {
         min-height: calc(var(--vh, 1vh) * 100);
-        min-height: -webkit-fill-available;
-
     }
     @font-face {
         font-family: 'Open Sans';
